fix social spacing

--- a/pattern-lab/source/_patterns/03-components/site-footer/_site-footer.scss
+++ b/pattern-lab/source/_patterns/03-components/site-footer/_site-footer.scss
@@ -27,6 +27,7 @@
       margin-bottom: $spacing--xs;
       margin-right: $spacing--xs;
     }
+    width: 40%;
   }
   &__social {
     float: right;
